The vague design

--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -14,10 +14,12 @@
     color: white;
     text-align: center;
     font-family: cursive;
-    font-size: large;
+    font-size: medium;
+    transition: all .2s ease-in-out;
 }   
 .text-style:hover {
     transform: scale(1.1);
+  
 }
 .resume {
     border: yellow;
@@ -25,6 +27,7 @@
 
 a:hover {
     color: yellow;
+    text-decoration: none;
 }
 
 .intro-start{
@@ -48,3 +51,149 @@ a:hover {
     color: #8892B0;
     font-family: cursive;
 }
+
+.test:hover{
+    /* margin-top: 200%; */
+    transform: scale(1.1);
+}
+
+.headings {
+    font-family: 'Calibri';
+    font-size: 30px;
+    color: white;
+    font-weight: 300;
+}
+
+.margin {
+    margin-top: 200px;
+    overflow: hidden
+}
+
+.horizontal {
+    border: 1px solid #8892B0;
+    /* display:inline-block; */
+    /* float: right, */
+}
+
+.para-style{
+    font-family: cursive;
+    /* font-size: 18px; */
+    color: #8892B0
+}
+
+.anchor-style{
+    color: #01E0F3;
+}
+
+.label-style:hover{
+    /* border: solid; */
+    /* border-color:#01E0F3; */
+    transform: scale(1.1);
+}
+
+.photo{
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    
+}
+
+.photo:hover{
+    transform: scale(1.1);
+}
+
+.max-size{
+    width: 150px;
+    max-width: 150px;
+}
+
+.image-style{
+    margin-top: 150px
+}
+
+.company-logo{
+    height: 200px;
+    width: 300px;
+    position: absolute;
+}
+
+.company-logo:hover{
+    transform: scale(1.1);
+}
+
+.button-style{
+    border: 1px solid #8892B0;
+    color: white;
+    font-family: cursive;
+    background-color:  #0A081D;
+}
+
+.button-style:hover{
+    color: yellow;
+    transform: scale(1.1);
+}
+
+.place-year{
+    display: inline-block;
+}
+
+
+.card-background{
+    /* padding: 10px; */
+    background-color:#0A081D ;
+    /* border:solid; */
+    /* border-color: grey; */
+    width: 30rem;
+    /* align-items: center; */
+}
+
+.card-image{
+     height: 20rem;
+     width:20rem;
+     padding: 10px;
+     /* padding-left: 100px; */
+     /* align-items: center; */
+}
+
+.card-image:hover{
+    transform: scale(1.1);
+}
+
+
+.github {
+    /* background-color:#0A081D ; */
+    color: white;
+}
+
+.fa-github:hover {
+    /* background-color:#0A081D ; */
+    transform: scale(1.1);
+}
+
+.card-image-book{
+    height: 20rem;
+    width:30rem;
+    padding: 10px;
+    padding-top: 40px
+    /* padding-left: 100px; */
+    /* align-items: center; */
+}
+
+.card-image-book:hover{
+    transform: scale(1.1);
+}
+
+.head:hover{
+    transform: scale(1.1);
+}
+
+.contact{
+    align-items: center;
+    text-align: center;
+}
+
+.footer {
+    color: #8892B0;
+    font-size: 12px
+}
+
