--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -1,3 +1,8 @@
+
+html {
+    scroll-behavior: smooth;
+  }
+
 .MainPage {
     margin: 100;
 }
@@ -194,6 +199,7 @@ a:hover {
 
 .footer {
     color: #8892B0;
-    font-size: 12px
+    font-size: 12px;
+    font-family: cursive;
 }
 
