--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -15,6 +15,10 @@ html {
     transform: scale(1.1);
 }
 
+.nav-style {
+    background-color: #0A081D;
+}
+
 .text-style {
     color: white;
     text-align: center;
