--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -28,7 +28,6 @@ html {
 }   
 .text-style:hover {
     transform: scale(1.1);
-  
 }
 .resume {
     border: yellow;
@@ -207,4 +206,11 @@ a:hover {
     font-size: 12px;
     font-family: Verdana;
 }
+
+div.card {
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* text-align: center; */
+}
+
 
