added logo animation

--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -208,4 +208,14 @@ a:hover {
 }
 
 
+.logo {
+    border-radius: 50%;
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+            transition:         transform .8s ease-in-out;
+  }
+.logo:hover {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+
 
